<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/current_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"


    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="0dp"
    app:cardElevation="8dp"
    app:contentPadding="8dp">

    <RelativeLayout
        android:id="@+id/current_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/current_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="@dimen/padding_horizontal"
            android:scaleType="centerCrop" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/current_icon"
            android:layout_alignLeft="@id/current_icon"
            android:layout_alignRight="@id/current_icon"
            android:layout_alignTop="@id/current_icon"
            android:padding="10dp" />

        <TextView
            android:id="@+id/current_temp"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/current_icon"
            android:layout_alignRight="@id/current_icon"

            android:layout_below="@id/current_icon"
            android:gravity="center"
            android:textColor="@color/md_white"
            tools:text="15°" />

        <TextView
            android:id="@+id/current_area"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/current_icon"
            android:textColor="@color/md_white"
            tools:text="London" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/current_area"
            android:layout_marginTop="4dp"
            android:layout_toRightOf="@id/current_icon"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/current_temp_feel"
                    style="@style/WeatherSmallLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/feels_like" />

                <TextView
                    android:id="@+id/current_visibility"
                    style="@style/WeatherSmallLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/visibility" />

                <TextView
                    android:id="@+id/current_wind_speed"
                    style="@style/WeatherSmallLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/wind_speed" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/current_precipitations"
                    style="@style/WeatherSmallLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/precipitations_mm" />

                <TextView
                    android:id="@+id/current_humidity"
                    style="@style/WeatherSmallLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/humidity" />

                <TextView
                    android:id="@+id/current_pressure"
                    style="@style/WeatherSmallLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/pressure" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>
